bug fixes: Alignment issues when in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -669,6 +669,10 @@ video {
   margin-top: 1rem;
 }
 
+.mr-10 {
+  margin-right: 2.5rem;
+}
+
 .block {
   display: block;
 }
@@ -1467,6 +1471,14 @@ video {
 
   .lg\:mt-0 {
     margin-top: 0px;
+  }
+
+  .lg\:mr-10 {
+    margin-right: 2.5rem;
+  }
+
+  .lg\:mr-5 {
+    margin-right: 1.25rem;
   }
 
   .lg\:flex {
